@@ -4,6 +4,12 @@ drumkv1 - an old-school drum-kit sampler
 ChangeLog
 
 
+GIT HEAD
+
+- Set on a minimum attack time of 500usec as much to prevent
+  audible clicking on low-pitched notes. (EXPERIMENTAL)
+
+
 0.8.5  2017-10-29  An Autumn'17 release.
 
 - Sample files are now saved as symlinks when saving to JACK
